footer alignment corrected

--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ ul.nav li.current a {
     height: 70px;
     text-align: left;
     font: normal 16px sans-serif;
-    padding: 10px 50px;
+    padding: 10px 0;
     position: fixed;
     bottom: 0;
 }
